// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unauthorized renders properly - access control enabled: false 1`] = `
<div
  className="css-rs5aad"
>
  <div
    className="css-8tu8mo-vertical-group"
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h1
        className="css-1fmhfo9"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          403
        </span>
      </h1>
    </div>
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h4
        className="css-u023fv"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          You do not have access to view this page.
           
          You must be at least an Admin.
          <br />
          <br />
          Please contact your organization administrator to request access.
        </span>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Unauthorized renders properly - access control enabled: true 1`] = `
<div
  className="css-rs5aad"
>
  <div
    className="css-8tu8mo-vertical-group"
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h1
        className="css-1fmhfo9"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          403
        </span>
      </h1>
    </div>
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h4
        className="css-u023fv"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          You do not have access to view this page.
           
          You are missing the grafana-oncall-app.testing:hi permission.
          <br />
          <br />
          Please contact your organization administrator to request access.
        </span>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Unauthorized renders properly the grammar for different roles - Admin 1`] = `
<div
  className="css-rs5aad"
>
  <div
    className="css-8tu8mo-vertical-group"
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h1
        className="css-1fmhfo9"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          403
        </span>
      </h1>
    </div>
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h4
        className="css-u023fv"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          You do not have access to view this page.
           
          You must be at least an Admin.
          <br />
          <br />
          Please contact your organization administrator to request access.
        </span>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Unauthorized renders properly the grammar for different roles - Editor 1`] = `
<div
  className="css-rs5aad"
>
  <div
    className="css-8tu8mo-vertical-group"
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h1
        className="css-1fmhfo9"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          403
        </span>
      </h1>
    </div>
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h4
        className="css-u023fv"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          You do not have access to view this page.
           
          You must be at least an Editor.
          <br />
          <br />
          Please contact your organization administrator to request access.
        </span>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Unauthorized renders properly the grammar for different roles - Viewer 1`] = `
<div
  className="css-rs5aad"
>
  <div
    className="css-8tu8mo-vertical-group"
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h1
        className="css-1fmhfo9"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          403
        </span>
      </h1>
    </div>
    <div
      className="css-qxdyop-layoutChildrenWrapper"
    >
      <h4
        className="css-u023fv"
      >
        <span
          className="css-77ouhj--undefined css-77ouhj--medium css-1287p17"
          style={
            {
              "maxWidth": undefined,
            }
          }
        >
          You do not have access to view this page.
           
          You must be at least a Viewer.
          <br />
          <br />
          Please contact your organization administrator to request access.
        </span>
      </h4>
    </div>
  </div>
</div>
`;
